--- a/vignettes/data-auditing.Rmd
+++ b/vignettes/data-auditing.Rmd
@@ -21,11 +21,15 @@ library(jfa)
 
 ## Introduction
 
-Welcome to the 'Data auditing' vignette of the **jfa** package. Here you can find a simple explanation of the functions in the package that facilitate data auditing. For more detailed explanations of each function, read the other vignettes on the [package website](https://koenderks.github.io/jfa).
+Welcome to the 'Data auditing' vignette of the **jfa** package. Here you can
+find a simple explanation of the functions in the package that facilitate data
+auditing. For more detailed explanations of each function, read the other
+vignettes on the [package website](https://koenderks.github.io/jfa).
 
 ## Functions and intended usage
 
-Below you can find an explanation of the available data auditing functions in **jfa**.
+Below you can find an explanation of the available data auditing functions in
+**jfa**.
 
 - [`digit_test()`](#test-digit-distributions-with-digit-test)
 - [`repeated_test()`](#test-for-repeated-values-with-repeated-test)
@@ -34,7 +38,15 @@ Below you can find an explanation of the available data auditing functions in **
 
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
 
-The function `digit_test()` takes a vector of numeric values, extract the requested digits, and compares the frequencies of these digits to a reference distribution. By default, the function performs a frequentist hypothesis test of the null hypothesis that the digits are distributed according to the reference distribution and produces a *p* value. When a prior is specified, the function performs a Bayesian hypothesis test of the null hypothesis that the digits are distributed according to the reference distribution against the alternative hypothesis that the digits are not distributed according to the reference distribution and produces a Bayes factor (Kass & Raftery, 1995).
+The function `digit_test()` takes a vector of numeric values, extract the
+requested digits, and compares the frequencies of these digits to a reference
+distribution. By default, the function performs a frequentist hypothesis test of
+the null hypothesis that the digits are distributed according to the reference
+distribution and produces a *p* value. When a prior is specified, the function
+performs a Bayesian hypothesis test of the null hypothesis that the digits are
+distributed according to the reference distribution against the alternative
+hypothesis that the digits are not distributed according to the reference
+distribution and produces a Bayes factor (Kass & Raftery, 1995).
 
 *Full function with default arguments:*
 
@@ -63,11 +75,16 @@ digit_test(x,
 
 *Example usage:*
 
-Benford’s law (Benford, 1938) is a principle that describes a pattern in many naturally-occurring numbers. According to Benford's law, each possible leading digit *d* in a naturally occurring, or non-manipulated, set of numbers occurs with a probability:
+Benford’s law (Benford, 1938) is a principle that describes a pattern in many
+naturally-occurring numbers. According to Benford's law, each possible leading
+digit *d* in a naturally occurring, or non-manipulated, set of numbers occurs
+with a probability:
 
 <img src="https://latex.codecogs.com/svg.image?p(d_i)&space;=&space;\text{log}_{10}(1&space;+&space;\frac{1}{d_i})" title="p(d_i) = \text{log}_{10}(\frac{1}{d_i})" />
 
-The distribution of leading digits in a data set of financial transaction values (e.g., the `sinoForest` data) can be extracted and tested against the expected frequencies under Benford's law using the code below.
+The distribution of leading digits in a data set of financial transaction values
+(e.g., the `sinoForest` data) can be extracted and tested against the expected
+frequencies under Benford's law using the code below.
 
 ```{r}
 # Frequentist hypothesis test
@@ -81,7 +98,10 @@ digit_test(sinoForest$value, check = "first", reference = "benford", prior = TRU
 
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
 
-The function `repeated_test()` analyzes the frequency with which values get repeated within a set of numbers. Unlike Benford's law, and its generalizations, this approach examines the entire number at once, not only the first or last digit. For the technical details of this procedure, see Simohnsohn (2019).
+The function `repeated_test()` analyzes the frequency with which values get
+repeated within a set of numbers. Unlike Benford's law, and its generalizations,
+this approach examines the entire number at once, not only the first or last
+digit. For the technical details of this procedure, see Simohnsohn (2019).
 
 *Full function with default arguments:*
 
@@ -109,7 +129,13 @@ repeated_test(x,
 
 *Example usage:*
 
-In this example, we analyze a data set from a (retracted) paper that describes three experiments run in Chinese factories, where workers were nudged to use more hand-sanitizer. These data were shown to exhibited two classic markers of data tampering: impossibly similar means and the uneven distribution of last digits (Yu, Nelson, & Simohnson, 2018). We can use the `rv.test()` function to test if these data also contain a greater amount of repeated values than expected if the data were not tampered with.
+In this example, we analyze a data set from a (retracted) paper that describes
+three experiments run in Chinese factories, where workers were nudged to use
+more hand-sanitizer. These data were shown to exhibited two classic markers of
+data tampering: impossibly similar means and the uneven distribution of last
+digits (Yu, Nelson, & Simohnson, 2018). We can use the `rv.test()` function to
+test if these data also contain a greater amount of repeated values than
+expected if the data were not tampered with.
 
 ```{r}
 repeated_test(sanitizer$value, check = "lasttwo", samples = 5000)
@@ -117,7 +143,10 @@ repeated_test(sanitizer$value, check = "lasttwo", samples = 5000)
 
 ## Benchmarks
 
-To validate the statistical results, **jfa**'s automated [unit tests](https://github.com/koenderks/jfa/tree/development/tests/testthat) regularly verify the main output from the package against the following benchmarks:
+To validate the statistical results, **jfa**'s automated
+[unit tests](https://github.com/koenderks/jfa/tree/development/tests/testthat)
+regularly verify the main output from the package against the following
+benchmarks:
 
 - [benford.analysis](https://cran.r-project.org/package=benford.analysis) (R package version 0.1.5)
 - [BenfordTests](https://cran.r-project.org/package=BenfordTests) (R package version 1.2.0)
